# alloq

./: .env.default  .pre-commit-config.yaml  AGENTS.md  README.md  Taskfile.dist.yml  gitleaks.toml  pyproject.toml  rxconfig.py
.agents/skills/reflex-state-and-architecture/: SKILL.md
.claude/: settings.local.json
.claude/skills/: appkit-mantine-reference  reflex-docs  testing-reflex-state
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml  post-create.sh
.github/: copilot-instructions.md
.github/skills/: reflex-state-and-architecture
.github/skills/appkit-mantine-reference/: SKILL.md
.github/skills/applying-reflex-best-practices/: SKILL.md
.github/skills/applying-reflex-best-practices/examples/: background_task_example.py  components_example.py  pages_example.py  state_example.py
.github/skills/reflex-state-and-architecture/: SKILL.md
.github/skills/reflex-state-and-architecture/examples/: background_task_example.py  components_example.py  form_validation_example.py
.github/skills/using-appkit-mantine/: SKILL.md
.github/skills/writing-python-code/: SKILL.md
alembic/versions/: 2025_04_30_appkit_user_0.10.0.py  2025_05_01_employee_roles_m2m_0.2.0.py  2025_05_01_employees_absences_0.1.0.py  2025_05_01_role_entity_0.1.0.py  2026_05_01_add_job_title_to_employee.py  2026_05_01_add_location_to_employee.py  2026_05_02_add_email_to_employee.py  2026_05_02_add_manager_id_to_employee.py  2026_05_02_add_state_to_project.py  2026_05_02_project_entities_0_1_0.py  2026_05_02_project_owners.py  2026_05_02_project_owners_m2m_employee.py  2026_05_02_remove_name_en_from_project.py  2026_05_03_add_customer_to_project.py  2026_05_05_capacity_allocations.py  2026_05_06_add_internal_hours_to_employee.py  2026_05_06_add_ramp_up_down_to_role.py  2026_05_07_add_abbreviation_to_role.py  2026_05_08_add_status_anmerkung_risk_fields.py  2026_05_08_normalize_risk_impact_to_score.py  2026_05_09_consolidated_baseline.py  2026_05_11_public_holidays.py
app/: app.py  mantine_provider.js  styles.py
app/components/: navbar.py  navbar_collapsible.py
app/pages/: holidays.py  profile.py  roles.py  users.py
assets/css/: alloq-theme.css  alloq-theme.org.css  appkit.css
assets/js/: planning_grid_keys.js
components/alloq-commons/: pyproject.toml
components/alloq-commons/src/alloq_commons/: __init__.py
components/alloq-commons/src/alloq_commons/components/: __init__.py  dashboard.py  formatters.py  forms.py  modal_layout.py  page_header.py  public_holiday.py  role.py
components/alloq-commons/src/alloq_commons/entities/: __init__.py  absence.py  capacity.py  capacity_allocation.py  employee.py  project.py  public_holiday.py  required_capacity.py  risk.py  role.py  status.py
components/alloq-commons/src/alloq_commons/models/: __init__.py  capacity.py  employee.py  project.py  public_holiday.py  required_capacity.py  risk.py  role.py  status.py
components/alloq-commons/src/alloq_commons/repositories/: __init__.py  absence_repository.py  capacity_allocation_repository.py  capacity_repository.py  employee_repository.py  project_repository.py  public_holiday_repository.py  required_capacity_repository.py  risk_repository.py  role_repository.py  status_repository.py
components/alloq-commons/src/alloq_commons/services/: utilization.py
components/alloq-commons/src/alloq_commons/state/: role_states.py
components/alloq-commons/src/alloq_commons/states/: __init__.py  holiday_state.py
components/alloq-commons/tests/: conftest.py  test_employees.py  test_page_header.py  test_projects.py  test_public_holidays.py  test_roles.py  test_utilization.py
components/alloq-dashboard/: pyproject.toml
components/alloq-dashboard/src/alloq_dashboard/: models.py  pages.py
components/alloq-dashboard/src/alloq_dashboard/components/: capacity_card.py  cards.py  dashboard_grid.py  drill_down_drawer.py  earned_value_card.py  kpi_card.py  project_cards.py  shared.py  top_risks_card.py  utilization_cards.py
components/alloq-dashboard/src/alloq_dashboard/services/: aggregation.py
components/alloq-dashboard/src/alloq_dashboard/states/: __init__.py  dashboard_states.py
components/alloq-dashboard/tests/: conftest.py  test_aggregation.py  test_dashboard_states.py
components/alloq-project/: pyproject.toml
components/alloq-project/src/alloq_project/: pages.py
components/alloq-project/src/alloq_project/components/: planning_filter_row.py  planning_grid.py  planning_heatmap.py  planning_legend.py  planning_project_view.py  planning_shared.py  planning_toolbar.py  project_card.py  project_form.py  project_overview.py  project_plan_modal.py  project_risk_tab.py  project_status_tab.py  project_toolbar.py
components/alloq-project/src/alloq_project/services/: __init__.py  forecast.py
components/alloq-project/src/alloq_project/states/: planning_grid_state.py  planning_project_view_state.py  planning_state.py  project_plan_state.py  project_state.py
components/alloq-project/tests/: conftest.py  test_forecast.py  test_planning_project_view_state.py  test_project_state.py
components/alloq-team/: pyproject.toml
components/alloq-team/src/alloq_team/: pages.py
components/alloq-team/src/alloq_team/components/: employee.py  employee_card.py  employee_table.py  toolbar.py
components/alloq-team/src/alloq_team/models/: employee.py
components/alloq-team/src/alloq_team/states/: __init__.py  team_state.py
configuration/: config.devcontainer.yaml  config.yaml
tests/: test_app.py  test_configuration.py  test_navbar_collapsible.py
