[project]
name = "Alloq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "alloq-commons",
    "alloq-dashboard",
    "alloq-project",
    "alloq-team",
    "appkit-user==1.9.7",
    "appkit-mantine==1.9.7",
    "appkit-commons==1.9.7",
    "appkit-ui==1.9.7",
    "psycopg[binary,pool]==3.3.4",
    "reflex==0.9.2",
    #"sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "aiosqlite==0.22.1",
    "bump-my-version==1.3.0",
    "detect-secrets==1.5.0",
    "faker==40.15.0",
    "pre-commit==4.6.0",
    "pytest_asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest==9.0.3",
    "ruff==0.15.12",
]

[tool.setuptools.packages.find]
where = [
    "components/alloq-dashboard/src",
    "components/alloq-project/src",
    "components/alloq-team/src",
    "components/alloq-commons/src",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
cache-dir = ".cache/uv_cache"

[tool.uv.workspace]
members = ["components/*"]
exclude = ["**/__pycache__"]

[tool.uv.sources]
alloq-commons = { workspace = true }
alloq-dashboard = { workspace = true }
alloq-project = { workspace = true }
alloq-team = { workspace = true }
# for **PRODUCTION** builds comment out the following lines to use published versions
# uncomment for local development to use the local versions of the appkit components
#appkit-mantine = { path = "../appkit/components/appkit-mantine", editable = true }
#appkit-user = { path = "../appkit/components/appkit-user", editable = true }
#appkit-commons = { path = "../appkit/components/appkit-commons", editable = true }
#appkit-ui = { path = "../appkit/components/appkit-ui", editable = true }


[tool.bumpversion]
commit = false
current_version = "0.1.0"
tag = false
allow-dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "configuration/config.yaml"
search = 'version: {current_version}'
replace = 'version: {new_version}'

[[tool.bumpversion.files]]
filename = "components/alloq-commons/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "components/alloq-dashboard/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "components/alloq-project/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "components/alloq-team/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.ruff]
cache-dir = ".cache/ruff"
indent-width = 4
line-length = 88
target-version = "py312"
extend-exclude = [
    ".cache",
    ".devcontainer",
    ".github",
    ".vscode",
    ".web",
    "build",
    "dist",
    "docs",
    "infra",
    "prompts",
    "scripts",
    "static",
]

[tool.ruff.lint]
extend-select = ["I"]
ignore = [
    "EM101", # Exception must not use a string literal
    "EM102", # Exception must not use a string literal with a format specifier
    "ISC001", # Implicit string concatenation
    "N811", # Constant {name} imported as non-constant {asname}
    "N818", # Exception name {name} should be named with an Error suffix
    "PLR0913", # Too many arguments in function
    "PT011", # pytest-raises-too-broad
    "PT012", # pytest.raises() block should contain a single simple statement
    "RUF012", # Mutable class attributes should be annotated with typing.ClassVar
    "RUF100", # unused noqa
    "SIM300", # Yoda conditions are discouraged, use {suggestion} instead
]
select = [
    "A", # Flake8-builtins
    "ANN001",
    "ANN201", # Missing return type annotation
    "ARG", # Flake8-arguments
    "ASYNC", # Flake8-async
    "B", # Flake8-bugbear
    "C4", # Flake8-comprehensions
    "DTZ", # Flake8-datetimez
    "E", # Pyflakes
    "EM", # Flake8-errmsg
    "EXE", # Flake8-executable
    "F", # Pyflakes
    "FIX", # Flake8-fixme
    "FAST", # FastAPI
    "G", # Flake8-logging-format
    "ICN", # Flake8-import-conventions
    "LOG", # Flake8-logging
    "N", # Naming
    "PERF", # Perflint
    "PIE", # Flake8-pie
    "PL", # PyLint
    "PT", # Flake8-pytest-style
    "PTH", # Flake8-use-pathlib
    "PYI", # Flake8-pyi
    "Q", # Flake8-quotes
    "RET", # Flake8-return
    "RUF", # Ruff
    "S", # Flake8-bandit
    "SIM", # Flake8-simplify
    "SLF", # Flake8-self
    "SLF001", # Flake8-self
    "T20", # Flake8-print
    "TID", # Flake8-tidy-imports
    "UP", # PyUpgrade - will show hints for deprecated syntax in python 3.11
    "W", # pycodestyle
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"] # {name} imported but unused
"server.py" = ["W605", "S104"] # invalid escape sequence
"test_**.py" = ["S101", "PLR2004", "ANN001", "S106", "SLF001", "RET504", "PERF401"]
"alembic/versions/*.py" = ["E501"]
"indexer/main.py" = ["S104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
exclude = ["*.pyi"]

[tool.ruff.lint.isort]
known-local-folder = ["app", "alembic"]
known-first-party = ["appkit_*"]

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["tests", "components/alloq-commons/tests", "components/alloq-project/tests"]
import_mode = "importlib"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0103",
    "C0114",
    "C0115",
    "C0116",
    "C0301",
    "C0415",
    "W0621",
    "E0239",
    "E1101",
    "E1102",
    "E1120",
    "E1136",
    "W0718",
    "R0903",
    "W0611",
    "W0613",
    "W0622",
]

[tool.mypy]
cache_dir = ".cache/mypy"
disallow_untyped_defs = true
incremental = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_errors = true
ignore_missing_imports = false
exclude = [
    ".cache",
    ".claude",
    ".venv",
    ".venv.mac",
    ".venv_mac",
    ".web",
    ".github",
    ".devcontainer",
    ".idea",
    ".vscode",
    "build",
    "dist",
    "docs",
    "infra",
    "prompts",
    "scripts",
    "static",
    "uploads",
]

[tool.coverage.run]
branch = true
omit = []
source = [
    "app",
    "server",
    "common",
    "components/alloq-commons/src/alloq_commons",
    "components/alloq-project/src/alloq_project",
    "components/alloq-team/src/alloq_team",
]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "if __name__ == .__main__.:", "pragma: no cover"]
fail_under = 80
show_missing = true
skip_covered = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
